@@ -10,7 +10,6 @@ import uk.gov.hmcts.reform.prl.utils.CommonUtils;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonValue;
 import javax.json.stream.JsonCollectors;
@@ -30,7 +29,7 @@ public class OtherPeopleInTheCaseRevisedMapper {
         }
         List<PartyDetails> otherPeopleInTheCaseList = otherPeopleInTheCase.stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         return otherPeopleInTheCaseList.stream().map(otherPeople -> new NullAwareJsonObjectBuilder()
             .add("firstName", otherPeople.getFirstName())
             .add("lastName", otherPeople.getLastName())
