@@ -15,7 +15,6 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILD_DETAILS_REVISED;
@@ -40,7 +39,7 @@ public class ChildDetailsRevisedChecker implements EventChecker {
             List<ChildDetailsRevised> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (ChildDetailsRevised c : children) {
                 log.debug("validateMandatoryFieldsCompleted  :{} ",validateMandatoryFieldsCompleted(c));
@@ -69,7 +68,7 @@ public class ChildDetailsRevisedChecker implements EventChecker {
             List<ChildDetailsRevised> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (ChildDetailsRevised c : children) {
                 if (validateAnyFieldStarted(c)) {
